# suricat

./: .gitignore  README.md
sensor/: CMakeLists.txt  http_client.h  picow_http_client.c
server/: .gitignore  Cargo.toml  example.env  sensormap.example.yml
server/scripts/: script1.example.sh  script2.example.sh  script3.example.sh
server/src/: main.rs
test/: CMakeLists.txt  test.c
